PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_5-108_produit_invalide1/gcc-compile.txt
input.c:3:14: error: indirection requires pointer operand ('int' invalid)
    return 2**1;
             ^~
1 error generated.

return code: 1
